Change in description

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section id="about">
     <h2>About Me</h2>
     <p>
-      Passionate about market finance and solving complex problems, I develop quantitative strategies and model market dynamics.
+      Passionate about financial markets and solving complex problems, I develop quantitative strategies and model market dynamics.
       I blend creativity, rigor, and technical expertise to optimize decision-making and uncover inefficiencies.
       My multicultural and multilingual background helps me thrive in international environments.
     </p>
